Fix for wonky navbar on Safari. Also some misc refactoring

--- a/src/style/MyPage.less
+++ b/src/style/MyPage.less
@@ -18,26 +18,8 @@ span.glyphicon.glyphicon-triangle-bottom, span.glyphicon.glyphicon-triangle-top 
 
 // nav bar at the top
 .nav-bar {
-    height: 8vh;
-	padding-top: 0.5vh;
-	display: flex;
-	flex-wrap: wrap;
-
-	.nav-col-4 {
-		flex-basis: 33.3%;
-	}
-
-	.nav-col-6 {
-		flex-basis: 50%;	
-	}
-	
 	.gl-logo {
-		height: 7vh;
-		padding: 10px;
-	}
-
-	.pull-right.logged-in {
-		padding: 1vh 0px;
+		height: 2.5rem;
 	}
 
 	li > a {
