--- a/src/style/flex.less
+++ b/src/style/flex.less
@@ -11,3 +11,12 @@
 .flex-centre {
     align-items: center;
 }
+
+.flex-align-items-start {
+    align-items: start;
+}
+
+.flex-vertical-align {
+    .flex-column();
+    justify-content: center;
+}
