--- a/src/style/main.less
+++ b/src/style/main.less
@@ -392,26 +392,6 @@ p > a:hover, span > a:hover  {
 		position: absolute !important; 
 	}
 
-	.nav-bar {
-		height: 12vh;
-		flex-direction: column;
-		flex-basis: 100%;
-		
-		.gl-logo {
-			height: 6vh;
-			padding: 0;
-			margin: 2vh 0 0 1vh;
-		}
-		
-		.vertiser-logo {
-			margin-top: 1.5vh;
-		}
-
-		.nav-bar .pull-right.logged-in {
-			margin: 1vh 1vh 0 0;
-		}
-	}
-
 	.panel-body {
 		width: unset;
 	}
